--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
       <dependency>
          <groupId>com.oxygenxml</groupId>
          <artifactId>oxygen-sdk</artifactId>
-         <version>16.1.0</version>
+         <version>17.0-SNAPSHOT</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
