Depending on the right version of servlet API.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 		     <version>${oxygen.sdk.version}</version>
 		     <classifier>classes</classifier>
 		     <scope>provided</scope>
+		     <exclusions>
+		     	<exclusion>
+		     		<artifactId>servlet-api</artifactId>
+		     		<groupId>javax.servlet</groupId>
+		     	</exclusion>
+		     </exclusions>
 		</dependency>
 	</dependencies>
 	<build>
