WA-17: Locking support for webdav.

--- a/plugin.xml
+++ b/plugin.xml
@@ -11,6 +11,7 @@
  class="com.oxygenxml.examples.webdav.WebdavPlugin">
  <runtime>
   <librariesFolder name="lib"/>
+  <library name="target/classes"/>
  </runtime>
  
  <extension type="URLHandler" 
@@ -19,4 +20,6 @@
   class="com.oxygenxml.examples.webdav.LoginServlet"/>
  <extension type="WebappStaticResourcesFolder" 
   path="resources/" href="webdav"/> 
+ <extension type="LockHandlerFactory"
+  class="com.oxygenxml.examples.webdav.WebdavLockHandlerFactory"/>
 </plugin>
