--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 	<properties>	
 		<oxygen.sdk.version>17.1.0</oxygen.sdk.version>
 	</properties>
+	
+	<repositories>
+		<repository>
+			<id>oxygenxml</id>
+			<name>oXygen XML SDK Maven Repository</name>
+			<url>http://oxygenxml.com/maven/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
