The webdav server now passes error responses messages, only if they do not contain a <body>, the servers tend have unstyled response bodies so we filter them out.

--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@
 
 <plugin
  id="com.oxygenxml.examples.webdav.CustomProtocol"
- name="WebDAVPlugin"
+ name="WebDAV Connector"
  description="Plugin that enables oXygen XML Web Author to connect to a server with WebDAV support."
  version="${project.nosnapshot.version}"
  vendor="SyncRO"
