--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,45 @@
 	<build>
 	  <finalName>${project.artifactId}-${project.nosnapshot.version}</finalName>
     <plugins>
+      <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>0.0.22</version>
+          <configuration>
+              <workingDirectory>.</workingDirectory>
+          </configuration>
+          <executions>
+              <execution>
+                  <id>install node and npm</id>
+                  <goals>
+                      <goal>install-node-and-npm</goal>
+                  </goals>
+        <configuration>
+          <nodeVersion>v0.12.1</nodeVersion>
+          <npmVersion>2.7.1</npmVersion>
+          <installDirectory>target</installDirectory>
+        </configuration>
+                  <phase>generate-resources</phase>
+              </execution>
+              <execution>
+                  <id>npm install</id>
+                  <goals>
+                      <goal>npm</goal>
+                  </goals>
+                  <phase>generate-resources</phase>
+              </execution>
+              <execution>
+                  <id>gulp build</id>
+                  <goals>
+                      <goal>gulp</goal>
+                  </goals>
+                  <phase>prepare-package</phase>
+                  <configuration>
+                      <arguments>prepare-package</arguments>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
       <!-- remove the -SNAPSHOT from packaged plugin -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
