--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>webapp-webdav-plugin</artifactId>
 
 	<properties>	
-		<oxygen.sdk.version>${project.version}</oxygen.sdk.version>
+		<oxygen.sdk.version>19.0.0.0</oxygen.sdk.version>
 	</properties>
 
   <repositories>
