--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: java
+addons: 
+ sonarcloud:
+    organization: "oxygenxml-github"
+    token:
+      secure: "${SONAR_CLOUD_TOKEN}"
+script:
+ - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
