--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ addons:
     organization: "oxygenxml-github"
     token:
       secure: "${SONAR_CLOUD_TOKEN}"
+    branches:
+      - SNAPSHOT
 script:
  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
