--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
 language: java
+addons: 
+ sonarcloud:
+    organization: "oxygenxml-github"
+    token:
+      secure: "${SONAR_CLOUD_TOKEN}"
+    branches:
+      - BRANCH_OXYGEN_RELEASE_19_1
+script:
+ - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
