--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
   <groupId>com.oxygenxml</groupId>
   <version>20.0-SNAPSHOT</version>
-	<artifactId>webapp-webdav-plugin</artifactId>
+  <artifactId>web-author-webdav-plugin</artifactId>
+  <name>Web Author WebDAV Plugin</name>
+  <description>Web Author plugin that allows editing files from a WebDAV server</description>	
 
 	<properties>	
 		<oxygen.sdk.version>20.0-SNAPSHOT</oxygen.sdk.version>
