WA-3004 Using WebappCSSResource extension to load custom CSS.

--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,8 @@
   
  <extension type="WebappStaticResourcesFolder" 
   path="resources/" href="webdav"/>
+
+ <extension type="WebappCSSResource" href="resources/webdav.css"/>
    
  <extension type="LockHandlerFactory"
   class="com.oxygenxml.examples.webdav.WebdavLockHandlerFactory"/>
