--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,13 @@
           <groupId>com.github.eirslett</groupId>
           <artifactId>frontend-maven-plugin</artifactId>
           <!-- The update was not straightforward so I postponed it. -->
-          <version>0.0.22</version>
+          <version>1.3</version>
           <configuration>
-              <workingDirectory>.</workingDirectory>
+              <nodeVersion>v4.4.2</nodeVersion>
+              <npmVersion>2.7.1</npmVersion>
+              <!--<nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>
+              <npmDownloadRoot>http://registry.npmjs.org/npm/-/</npmDownloadRoot>-->
+              <installDirectory>target</installDirectory>
           </configuration>
           <executions>
               <execution>
@@ -57,11 +61,6 @@
                   <goals>
                       <goal>install-node-and-npm</goal>
                   </goals>
-        <configuration>
-          <nodeVersion>v0.12.1</nodeVersion>
-          <npmVersion>2.7.1</npmVersion>
-          <installDirectory>target</installDirectory>
-        </configuration>
                   <phase>generate-resources</phase>
               </execution>
               <execution>
