--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,12 @@
       <plugin>
           <groupId>com.github.eirslett</groupId>
           <artifactId>frontend-maven-plugin</artifactId>
-          <!-- The update was not straightforward so I postponed it. -->
-          <version>1.3</version>
+          <version>1.9.1</version>
           <configuration>
-              <nodeVersion>v4.4.2</nodeVersion>
-              <npmVersion>2.7.1</npmVersion>
-              <!--<nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>
-              <npmDownloadRoot>http://registry.npmjs.org/npm/-/</npmDownloadRoot>-->
+              <nodeVersion>v8.17.0</nodeVersion>
+              <npmVersion>6.13.4</npmVersion>
+              <nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>
+              <npmDownloadRoot>http://registry.npmjs.org/npm/-/</npmDownloadRoot>
               <installDirectory>target</installDirectory>
           </configuration>
           <executions>
