--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,8 @@
           <configuration>
               <nodeVersion>v8.17.0</nodeVersion>
               <npmVersion>6.13.4</npmVersion>
-              <nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>
-              <npmDownloadRoot>http://registry.npmjs.org/npm/-/</npmDownloadRoot>
+              <nodeDownloadRoot>http://nas.sync.ro/MyWeb/test/jenkins-tools/nodejs/</nodeDownloadRoot>
+              <npmDownloadRoot>http://nas.sync.ro/MyWeb/test/jenkins-tools/npm/</npmDownloadRoot>
               <installDirectory>target</installDirectory>
           </configuration>
           <executions>
