--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
       <classifier>classes</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
 	</dependencies>
 	<build>
     <plugins>
